--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.NBAFantasy" parent="Base.Theme.NBAFantasy" />
+
+
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
+        //toolbar back arrow color
+        <item name="android:textColorSecondary">@android:color/white</item>
+        //toolbar title color
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:background">#0F1871</item>
+    </style>
 </resources>
