--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,23 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".juego.PantallaJuegoActivity"
-    android:background="@drawable/pant_juego">
-
+    tools:context=".inicioSesion.RegistroActivity"
+    android:background="@drawable/pant_registro">
 
     <Button
-        android:id="@+id/bt_comenzar_partida"
-        android:layout_width="240dp"
-        android:layout_height="55dp"
+        android:id="@+id/bt_registrarse"
+        android:layout_width="243dp"
+        android:layout_height="52dp"
         android:backgroundTint="#C7112C"
-        android:text="Comenzar partida"
+        android:text="Registrarse"
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.517" />
-
+        app:layout_constraintVertical_bias="0.88" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
