--- a/app/src/main/res/layout/activity_victoria.xml
+++ b/app/src/main/res/layout/activity_victoria.xml
@@ -4,23 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".juego.PantallaJuegoActivity"
-    android:background="@drawable/pant_juego">
-
+    tools:context=".juego.resultadoPartido.VictoriaActivity"
+    android:background="@drawable/pant_victoria">
 
     <Button
-        android:id="@+id/bt_comenzar_partida"
-        android:layout_width="240dp"
-        android:layout_height="55dp"
+        android:id="@+id/bt_salir_victoria"
+        android:layout_width="158dp"
+        android:layout_height="57dp"
         android:backgroundTint="#C7112C"
-        android:text="Comenzar partida"
+        android:text="Salir"
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.517" />
-
-
+        app:layout_constraintVertical_bias="0.894" />
 </androidx.constraintlayout.widget.ConstraintLayout>
