--- a/app/src/main/res/layout/fragment_pant_juego.xml
+++ b/app/src/main/res/layout/fragment_pant_juego.xml
@@ -4,20 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.PantJuegoFragment">
+    tools:context=".home.PantJuegoFragment"
+    android:background="@drawable/pant_principal">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="800dp"
-        android:scaleType="center"
-        android:src="@drawable/pant_principal" />
 
     <Button
         android:id="@+id/bt_jugar"
