--- a/app/src/main/res/navigation/home_grafonav.xml
+++ b/app/src/main/res/navigation/home_grafonav.xml
@@ -5,6 +5,11 @@
     android:id="@+id/home_grafonav"
     app:startDestination="@id/pantJuegoFragment">
 
+    <action
+        android:id="@+id/acccion_main_to_ajustesFragment"
+        app:destination="@id/ajustesFragment"
+        />
+
     <fragment
         android:id="@+id/editarFragment"
         android:name="es.unex.nbafantasy.home.EditarFragment"
@@ -35,4 +40,9 @@
         android:name="es.unex.nbafantasy.juego.PantallaJuegoActivity"
         android:label="activity_pantalla_juego2"
         tools:layout="@layout/activity_pantalla_juego" />
+    <fragment
+        android:id="@+id/ajustesFragment"
+        android:name="es.unex.nbafantasy.AjustesFragment"
+        android:label="Ajustes"/>
+
 </navigation>
