Fragmento de lista de jugadores, trae los jugadores y sus estadisticas de la api en un RV y pantalla de detalles.

--- a/app/src/main/res/navigation/home_grafonav.xml
+++ b/app/src/main/res/navigation/home_grafonav.xml
@@ -47,7 +47,7 @@
     <fragment
         android:id="@+id/listaJugadoresDetailsFragment"
         android:name="es.unex.nbafantasy.home.ListaJugadoresDetailsFragment"
-        android:label="ListaJugadoresDetailsFragment" >
+        android:label="Detalles del jugador" >
         <argument
             android:name="nba"
             app:argType="es.unex.nbafantasy.Data.model.NBAData" />
