Pantalla de editar jugadores con manejo de las estrellas para añadir jugadores al equipo y pantalla de detalles.

--- a/app/src/main/res/layout/fragment_editar_details.xml
+++ b/app/src/main/res/layout/fragment_editar_details.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cl_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="30dp">
-
     <TextView
         android:id="@+id/players_name"
         android:layout_width="wrap_content"
@@ -21,6 +19,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/btnFavoriteDetail"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/favorite_button_selected"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/players_name" />
+
     <TextView
         android:id="@+id/players_team"
         android:layout_width="wrap_content"
@@ -31,7 +39,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/players_name" />
+        app:layout_constraintTop_toBottomOf="@+id/btnFavoriteDetail" />
     <TextView
         android:id="@+id/players_conference"
         android:layout_width="wrap_content"
@@ -78,7 +86,7 @@
         app:layout_constraintStart_toStartOf="@+id/players_height"
         app:layout_constraintTop_toBottomOf="@+id/players_height" />
 
-        <TextView
+    <TextView
         android:id="@+id/players_block"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
