--- a/app/src/main/res/layout/fragment_resultado.xml
+++ b/app/src/main/res/layout/fragment_resultado.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.ResultadoFragment">
+    tools:context=".home.ResultadoFragment"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
