--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -4,64 +4,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cl_item"
     android:layout_width="match_parent"
+    android:padding="2dp"
+    android:background="@color/red"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_Item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="20dp"
         android:layout_margin="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:backgroundTintMode="screen">
+            android:layout_height="wrap_content"
+            android:backgroundTintMode="screen"
+            >
+        <TextView
+            android:id="@+id/players_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="4dp"
+            android:textStyle="bold"
+            android:text="name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/players_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="4dp"
-                android:textStyle="bold"
-                android:text="name"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/players_team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="equipo"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="15sp"
+            android:layout_marginLeft="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/players_name" />
 
-            <TextView
-                android:id="@+id/players_team"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="equipo"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="15sp"
-                android:layout_marginLeft="50dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/players_name" />
-
-            <TextView android:id="@+id/players_Position"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="posicion"
-                android:textSize="15sp"
-                app:layout_constraintStart_toStartOf="@+id/players_team"
-                app:layout_constraintTop_toBottomOf="@+id/players_team" />
-            <TextView
-                android:id="@+id/players_stats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="estadisticas"
-                android:textSize="15sp"
-                app:layout_constraintStart_toStartOf="@+id/players_Position"
-                app:layout_constraintTop_toBottomOf="@+id/players_Position" />
+        <TextView android:id="@+id/players_Position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:text="posicion"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="@+id/players_team"
+            app:layout_constraintTop_toBottomOf="@+id/players_team" />
+        <TextView
+            android:id="@+id/players_stats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:text="estadisticas"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="@+id/players_Position"
+            app:layout_constraintTop_toBottomOf="@+id/players_Position" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
