--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#B00020</color>color>
+    <color name="red">#B00020</color>
+    <color name="skyblue">#D6EAF8</color>
 </resources>
