--- a/app/src/main/res/layout/fragment_pant_juego.xml
+++ b/app/src/main/res/layout/fragment_pant_juego.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="204dp"
         android:gravity="center"
-        android:text="name"
-        android:translationY="55dp"
+        android:text=""
+        android:translationY="50dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,11 +28,11 @@
         android:layout_height="66dp"
         android:layout_marginTop="204dp"
         android:gravity="center"
-        android:text="name"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
         android:translationX="0dp"
-        android:translationY="205dp"
+        android:translationY="185dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,11 +43,11 @@
         android:layout_height="66dp"
         android:layout_marginTop="204dp"
         android:gravity="center"
-        android:text="name"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
-        android:translationX="250dp"
-        android:translationY="205dp"
+        android:translationX="260dp"
+        android:translationY="185dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
