--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#B00020</color>
     <color name="skyblue">#D6EAF8</color>
+    <color name="lavenderblue">#BFBFFE</color>
+    <color name="Lightgreen">#80FF80</color>
+
 </resources>
